Status after Week 7 Lesson 4 HTML

--- a/index.html
+++ b/index.html
@@ -13,6 +13,26 @@
         <title>Weather App</title>
     </head>
     <body>
+        <header>
+            <form>
+                <input type="search" placeholder="Enter a city..." required />
+                <input type="submit" value="Search" />
+            </form>
+        </header>
+        <main>
+            <h1>Welcome to the Meteo App</h1>
+        </main>
+        <div>
+            <h1>Paris</h1>
+            <p>
+                Tuesday 14:49, scattered clouds
+                <br />
+                Humidity: 66%, Wind: 3.13km/h
+            </p>
+        </div>
+        <div>☀ 12°C</div>
+
+        <!-- parked for now
         <div class="container">
             <div class="weather-app-wrapper">
                 <div class="weather-app">
@@ -40,11 +60,15 @@
                     </div>
                 </div>
                 <small
-                    ><a href="" target="_blank">Open-source code</a> by
-                    MZ</small
+                    ><a
+                        href="https://github.com/AnotherFirst/Vanilla_Weather_App"
+                        target="_blank"
+                        >Open-source code</a
+                    >
+                    by MZ</small
                 >
             </div>
-        </div>
+        </div> -->
         <script src="src/app.js"></script>
     </body>
 </html>
