--- a/index.html
+++ b/index.html
@@ -4,35 +4,66 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="src/styles.css" />
-        <link
+        <!-- <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
+        /> -->
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Roboto"
         />
+
         <title>Weather App</title>
     </head>
     <body>
-        <header>
-            <form>
-                <input type="search" placeholder="Enter a city..." required />
-                <input type="submit" value="Search" />
-            </form>
-        </header>
-        <main>
-            <h1>Welcome to the Meteo App</h1>
-        </main>
-        <div>
-            <h1>Paris</h1>
-            <p>
-                Tuesday 14:49, scattered clouds
-                <br />
-                Humidity: 66%, Wind: 3.13km/h
-            </p>
-        </div>
-        <div>☀ 12°C</div>
+        <div class="weather-app">
+            <header>
+                <form class="search-form">
+                    <input
+                        type="search"
+                        placeholder="Enter a city..."
+                        required
+                        class="search-form-input"
+                    />
+                    <input
+                        type="submit"
+                        value="Search"
+                        class="search-form-button"
+                    />
+                </form>
+            </header>
 
-        <!-- parked for now
+            <main>
+                <div class="weather-app-data">
+                    <div>
+                        <h1 class="weather-app-city">Paris</h1>
+                        <p class="weather-app-details">
+                            Tuesday 14:49, scattered clouds
+                            <br />
+                            Humidity: <strong>66%</strong>, Wind:
+                            <strong>3.13km/h</strong>
+                        </p>
+                    </div>
+                    <div class="weather-app-temperature-container">
+                        <div class="weather-app-icon">☀</div>
+                        <div class="weather-app-temperature">12</div>
+                        <div class="weather-app-unit">°C</div>
+                    </div>
+                </div>
+            </main>
+
+            <footer>
+                <a
+                    href="https://github.com/AnotherFirst/Vanilla_Weather_App"
+                    target="_blank"
+                    >Open-source code</a
+                >
+                by MZ
+            </footer>
+
+            <!-- parked for now
         <div class="container">
             <div class="weather-app-wrapper">
                 <div class="weather-app">
@@ -69,6 +100,7 @@
                 >
             </div>
         </div> -->
+        </div>
         <script src="src/app.js"></script>
     </body>
 </html>
