--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Roboto"
         />
-
+        <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
         <title>Weather App</title>
     </head>
     <body>
