--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
                         value="Search"
                         class="search-form-button-search"
                     />
-                    <!-- <button class="search-form-button-unit" id="unitBtn">°F</button> -->
                     <input
                         type="button"
                         value="Switch to °F"
@@ -76,7 +75,11 @@
                     >Open-source code</a
                 >
                 by MZ, hosted on
-                <a href="tbd" target="_blank">Netlify</a>
+                <a
+                    href="https://shecodes-plus-vanilla-weather-mz.netlify.app/"
+                    target="_blank"
+                    >Netlify</a
+                >
             </footer>
 
             <!-- parked for now
