--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                     <div>
                         <h1 class="weather-app-city" id="city"></h1>
                         <p class="weather-app-details">
-                            <span id="time"></span>,
+                            <span id="time"></span>
                             <span id="description"></span>
                             <br />
-                            Humidity: <strong id="humidity"></strong>, Wind:
-                            <strong id="wind-speed"></strong>
+                            <span id="humidity"></span>
+                            <span id="wind-speed"></span>
                         </p>
                     </div>
                     <div class="weather-app-temperature-container">
