--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Roboto"
         />
+        <link
+            href="https://fonts.googleapis.com/icon?family=Material+Icons"
+            rel="stylesheet"
+        />
         <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
         <title>Weather App</title>
     </head>
@@ -28,16 +32,21 @@
                         class="search-form-input"
                         id="search-form-input"
                     />
-                    <input
-                        type="submit"
-                        value="Search"
-                        class="search-form-button-search"
-                    />
+                    <button type="submit" class="search-form-button-search">
+                        <span class="material-icons">search</span>
+                    </button>
+                    <button
+                        type="button"
+                        class="search-form-button-get-position"
+                        id="get-position-btn"
+                    >
+                        <span class="material-icons">room</span>
+                    </button>
                     <input
                         type="button"
                         value="Switch to °F"
                         class="search-form-button-unit"
-                        id="unitBtn"
+                        id="unit-btn"
                     />
                 </form>
             </header>
