Status after Week 8 Lesson 4 Forecast JS Injection

--- a/index.html
+++ b/index.html
@@ -75,22 +75,7 @@
                         ></div>
                     </div>
                 </div>
-                <div class="weather-forecast">
-                    <div class="forecast-day-container">
-                        <div class="forecast-day">Mon</div>
-                        <div class="forecast-icon">
-                            <img
-                                src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png"
-                                alt="weather icon"
-                                width="50"
-                            />
-                        </div>
-                        <div class="forecast-temps">
-                            <span class="forecast-temp-max">10° </span>
-                            <span class="forecast-temp-min">0°</span>
-                        </div>
-                    </div>
-                </div>
+                <div class="weather-forecast" id="forecast"></div>
             </main>
 
             <footer>
