--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                         type="button"
                         class="search-form-button-get-position"
                         id="get-position-btn"
+                        title="Get weather for your current location"
                     >
                         <span class="material-icons">room</span>
                     </button>
@@ -64,14 +65,20 @@
                         </p>
                     </div>
                     <div class="weather-app-temperature-container">
-                        <div id="icon"></div>
+                        <div class="weather-app-temperature-container-row1">
+                            <div id="icon"></div>
+                            <div
+                                class="weather-app-temperature"
+                                id="temperature"
+                            ></div>
+                            <div
+                                class="weather-app-unit"
+                                id="weather-app-unit"
+                            ></div>
+                        </div>
                         <div
-                            class="weather-app-temperature"
-                            id="temperature"
-                        ></div>
-                        <div
-                            class="weather-app-unit"
-                            id="weather-app-unit"
+                            class="weather-app-temperature-container-row2"
+                            id="feels-like"
                         ></div>
                     </div>
                 </div>
