--- a/index.html
+++ b/index.html
@@ -26,23 +26,20 @@
                         class="search-form-input"
                         id="search-form-input"
                     />
-                    <button type="submit" class="search-form-button-search btn">
+                    <button type="submit" class="search-form-btn">
                         <span class="material-icons">search</span>
                     </button>
                     <button
                         type="button"
-                        class="search-form-button-get-position btn"
+                        class="search-form-btn"
                         id="get-position-btn"
                         title="Get weather for your current location"
                     >
                         <span class="material-icons">room</span>
                     </button>
-                    <input
-                        type="button"
-                        value="Switch to °F"
-                        class="search-form-button-unit btn"
-                        id="unit-btn"
-                    />
+                    <button type="button" class="search-form-btn" id="unit-btn">
+                        Switch to °F
+                    </button>
                 </form>
             </header>
 
