Changed search field placeholder

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <form class="search-form" id="search-form">
                     <input
                         type="search"
-                        placeholder="Enter a city..."
+                        placeholder="City..."
                         required
                         class="search-form-input"
                         id="search-form-input"
