--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
             </header>
 
             <main>
-                <h1 class="weather-app-city" id="city"></h1>
-                <div class="weather-app-data">
+                <h1 class="city" id="city"></h1>
+                <div class="current-weather">
                     <div>
-                        <p class="weather-app-details">
+                        <p class="current-weather-left-column-container">
                             <span id="time"></span>
                             <br />
                             <strong id="description"></strong>
@@ -57,20 +57,20 @@
                             <span id="wind-speed"></span>
                         </p>
                     </div>
-                    <div class="weather-app-temperature-container">
-                        <div class="weather-app-temperature-container-row1">
+                    <div class="current-weather-right-column-container">
+                        <div class="current-weather-right-column-row1">
                             <div id="icon"></div>
                             <div
-                                class="weather-app-temperature"
+                                class="current-temperature"
                                 id="temperature"
                             ></div>
                             <div
-                                class="weather-app-unit"
-                                id="weather-app-unit"
+                                class="temperature-unit"
+                                id="temperature-unit"
                             ></div>
                         </div>
                         <div
-                            class="weather-app-temperature-container-row2"
+                            class="current-weather-right-column-row2"
                             id="feels-like"
                         ></div>
                     </div>
@@ -86,7 +86,7 @@
                 >
                 by MZ, hosted on
                 <a
-                    href="https://shecodes-plus-vanilla-weather-mz.netlify.app/"
+                    href="https://shecodes-weather-app-by-mz.netlify.app/"
                     target="_blank"
                     >Netlify</a
                 >
