--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <span class="material-icons">room</span>
                     </button>
                     <button type="button" class="search-form-btn" id="unit-btn">
-                        Switch to °F
+                        Convert to °F
                     </button>
                 </form>
             </header>
